--- a/frontend/src/app/globals.scss
+++ b/frontend/src/app/globals.scss
@@ -112,3 +112,26 @@ footer::before {
 .admin_formadd_pr::-webkit-scrollbar {
   display: none;
 }
+
+.searchOrderPage_bg{
+  background-image: url("https://images.pexels.com/photos/958545/pexels-photo-958545.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  background-repeat: no-repeat  ;
+  background-size: cover;
+  // backdrop-filter: ;
+}
+
+.searchOrderPage_bg__box{
+  background-color: rgba(221, 255, 255, 0.3);
+}
+
+.bg_thank_orderPage{
+  background-image: url("https://images.pexels.com/photos/691114/pexels-photo-691114.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  background-repeat: no-repeat;
+  background-size: cover;
+  backdrop-filter: blur(5px);
+}
+
+.popup-content{
+  border-radius: 8px;
+  padding: 20px !important;
+}
